--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,114 +2,31 @@ ci:
   autofix_prs: true
   autoupdate_schedule: quarterly
 
-exclude: |
-  (?x)^(
-      neural_coder/test/.+|
-      neural_coder/examples/.+
-  )$
-
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.5
     hooks:
-      - id: end-of-file-fixer
-        files: (.*\.(py|md|rst|yaml|yml))$
-        exclude: |
+      - id: insert-license
+        files: |
           (?x)^(
-              examples/.+
+            auto_round/.*(py|yaml|yml|sh)
           )$
-      - id: check-json
-        exclude: |
-          (?x)^(
-              .vscode/settings_recommended.json
-          )$
-      - id: check-yaml
-      - id: debug-statements
-      - id: file-contents-sorter
-        args: [--unique]
-      - id: requirements-txt-fixer
-        exclude: |
-          (?x)^(
-              examples/.+
-          )$
-      - id: trailing-whitespace
-        files: (.*\.(py|rst|cmake|yaml|yml))$
-        exclude: |
-          (?x)^(
-              examples/.+
-          )$
-
-  - repo: https://github.com/asottile/yesqa
-    rev: v1.5.0
-    hooks:
-      - id: yesqa
-        name: Unused noqa
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        exclude: |
-          (?x)^(
-              examples/.+
-          )$
-
-  - repo: https://github.com/PyCQA/docformatter
-    rev: v1.7.5
-    hooks:
-      - id: docformatter
-        args: [
-            --in-place,
-            --wrap-summaries=0, # 0 means disable wrap
-            --wrap-descriptions=0, # 0 means disable wrap
-            --black,
-            --style=google,
+        args:
+          [
+            --license-filepath=.azure-pipelines/license_template.txt,
+            --use-current-year,
+            --detect-license-in-X-top-lines=40,
+            --skip-license-insertion-comment=Copyright,
           ]
-        exclude: |
-          (?x)^(
-              examples/.+
-          )$
-
-  - repo: https://github.com/psf/black.git
-    rev: 24.3.0
-    hooks:
-      - id: black
-        files: (.*\.py)$
-        exclude: |
-          (?x)^(
-              examples/.+
-          )$
-
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
-    hooks:
-      - id: blacken-docs
-        args: [--line-length=120, --skip-errors]
-        additional_dependencies:
-          - black==24.1.1
-        exclude: |
-          (?x)^(
-              examples/.+|
-              docs/.+
-          )$
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
       - id: codespell
+        args: [-w]
         additional_dependencies:
           - tomli
         exclude: |
           (?x)^(
-              examples/.*(txt|patch)|
-          )$
-
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.5
-    hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix, --no-cache]
-        exclude: |
-          (?x)^(
-              examples/.+
+              examples/.*(txt|patch)
           )$
