--- a/.azure-pipelines/template/docker-template.yml
+++ b/.azure-pipelines/template/docker-template.yml
@@ -54,12 +54,13 @@ steps:
           git clone ${{ parameters.repo }} ${BUILD_SOURCESDIRECTORY}
           git config --global --add safe.directory ${BUILD_SOURCESDIRECTORY}
           cd ${BUILD_SOURCESDIRECTORY}
-          git checkout master
-        displayName: "Checkout out master"
+          git checkout main
+        displayName: "Checkout out main"
 
   - script: |
       if [[ ! $(docker images | grep -i ${{ parameters.repoName }}:${{ parameters.repoTag }}) ]]; then
-        docker build -f ${BUILD_SOURCESDIRECTORY}/.azure-pipelines/docker/${{parameters.dockerFileName}}.devel -t ${{ parameters.repoName }}:${{ parameters.repoTag }} .
+        cd ${BUILD_SOURCESDIRECTORY}
+        docker build -f .azure-pipelines/docker/${{parameters.dockerFileName}}.devel -t ${{ parameters.repoName }}:${{ parameters.repoTag }} .
       fi
       docker images | grep -i ${{ parameters.repoName }}
       if [[ $? -ne 0 ]]; then
