Fix UT coverage report (#180)
Signed-off-by: Sun, Xuehao <xuehao.sun@intel.com>

--- a/.azure-pipelines/template/ut-template.yml
+++ b/.azure-pipelines/template/ut-template.yml
@@ -45,7 +45,7 @@ steps:
     condition: succeededOrFailed()
     inputs:
       targetPath: ${{ parameters.uploadPath }}
-      artifact: $(System.JobAttempt)_${{ parameters.utArtifact }}_coverage
+      artifact: ${{ parameters.utArtifact }}_coverage
       publishLocation: "pipeline"
 
   - task: Bash@3
